apps/radicale/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radicale
spec:
  type: ClusterIP
  selector:
    app: radicale
  ports:
    - name: http
      port: 5232
      targetPort: http
